--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,20 +11,22 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  mobx:
-  flutter_mobx:
-  get_it:
-  json_annotation:
-  oktoast:
-  intl:
-  dio:
-  firebase_crashlytics:
-  firebase_analytics:
+  dio: ^3.0.8
+  firebase_analytics: ^5.0.11
+  firebase_crashlytics: ^0.1.2+5
+  flutter_mobx: ^1.0.1
+  get: ^1.9.2
+  get_it: ^3.1.0
+  json_annotation: ^3.0.1
+  mobx: ^1.0.2
+  modal_progress_hud: ^0.1.3
+  oktoast: ^2.3.1
 
 dev_dependencies:
   mobx_codegen:
   build_runner:
   lint:
+  json_serializable:
   flutter_test:
     sdk: flutter
 
