--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,16 +2,10 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Flutter Development",
+      "name": "Flutter",
       "request": "launch",
       "type": "dart",
-      "program": "lib/main_dev.dart"
-    },
-    {
-      "name": "Flutter Production",
-      "request": "launch",
-      "type": "dart",
-      "program": "lib/main_prod.dart"
+      "program": "lib/main.dart"
     }
   ]
 }
