--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,14 +18,18 @@ dependencies:
   flutter_mobx: ^1.0.1
   get: ^1.9.2
   get_it: ^3.1.0
+  hive: ^1.4.0+1
+  hive_flutter: ^0.3.0+1
   json_annotation: ^3.0.1
   mobx: ^1.0.2
   modal_progress_hud: ^0.1.3
   oktoast: ^2.3.1
+  path_provider: ^1.6.0
 
 dev_dependencies:
   mobx_codegen: ^1.0.2
   build_runner: ^1.7.4
+  hive_generator: ^0.7.0
   lint: ^1.1.1
   json_serializable: ^3.2.5
   flutter_test:
