--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   firebase_crashlytics: ^0.1.2+5
   flutter_dotenv: ^2.1.0
   flutter_mobx: ^1.0.1
-  get: ^1.9.2
+  get: ^3.4.4
   get_it: ^3.1.0
   hive: ^1.4.0+1
   hive_flutter: ^0.3.0+1
@@ -32,6 +32,7 @@ dev_dependencies:
   hive_generator: ^0.7.0
   lint: ^1.1.1
   json_serializable: ^3.2.5
+  test: ^1.14.4
   flutter_test:
     sdk: flutter
 
