--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dev_dependencies:
   lint: ^1.1.1
   json_serializable: ^3.2.5
   test: ^1.14.4
+  mockito: ^4.1.1
   flutter_test:
     sdk: flutter
 
